Fix width issue of dashboard badges on firefox and safari.

--- a/src/features/home/Dashboard.less
+++ b/src/features/home/Dashboard.less
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   .top-badges {
-
+    width: 100%;
     display: table;
     border-spacing: 10px;
     margin: -10px;
